# hernan-lab-to-nwb

./: README.md  pyproject.toml
griffin_lab_to_nwb/core/dep/: base.py  base_v2.py
griffin_lab_to_nwb/dep/nwb-converters-terminal-scripts/: Read me  miniscope_to_nwb.py  pinnacle_to_nwb.py
griffin_lab_to_nwb/readers/: ioreaders_backup.py
griffin_lab_to_nwb/readers/dep/: ioreaders_copy.py  ioreaders_old.py  nwbtools.py
griffin_lab_to_nwb/utils/: READ ME.md  ephys_plotters.py  neuralynxio.py  nlxheader.py  nwb_utils.py
griffin_lab_to_nwb/utils/dep/: read_vt_data.py  unpack_data.py  util_funs.py
hernan_lab_to_nwb/: converters.py
hernan_lab_to_nwb/analyze/: Considering stop and starts.py.ipynb  Interactive - spectral.py.ipynb  spectral.py
hernan_lab_to_nwb/analyze/dep/: spectral_old.py
hernan_lab_to_nwb/core/: base.py
hernan_lab_to_nwb/core/dep/: ephys.py
hernan_lab_to_nwb/demo/: ephys2nwb.ipynb
hernan_lab_to_nwb/dep/nwb-converters-terminal-scripts/: nwb_metaDataWriter.py
hernan_lab_to_nwb/experiment_specific/: pinnacle_to_nwb_hernan.py
hernan_lab_to_nwb/nwb-converters-terminal-scripts/: nwb_metaDataWriter.py  pinnacle_to_nwb.py
hernan_lab_to_nwb/preprocessing/: caiman_wrapper.py
hernan_lab_to_nwb/readers/: ioreaders.py  ioreaders_pc_backup.py
hernan_lab_to_nwb/readers/dep/: nwbtools_old.py
hernan_lab_to_nwb/utils/: image_utils.py  neuralynxio.py  neuralynxrawio.py  nlxhelper.py  nwb-excel-interface.py  nwb_utils.py  plotters.py
tests/: GriffinConvert.ipynb  GriffinConvert.py  ephys2nwb.ipynb  fulltest.ipynb
tests/dep/: ephys2nwb.ipynb
(+20 files in other folders)
