[tool.poetry]
name = "hernan-lab-to-nwb"
version = "0.1.1"
description = "Code to facilitate NWB conversions and data extraction in the labs of Amanda Hernan and Rodney Scott"
authors = ["John Stout <john.j.stout.jr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "1.25.2"
pynwb  = "2.5.0"
pandas = "1.5.3"
opencv-python = "4.8.1.78"
ipykernel = "6.25.2"
jupyterlab = "^4.0.7"
matplotlib = "3.8.0"
pyEDFlib = "0.1.36"
pynapple = "0.4.0"
scipy = "1.11.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
